--- a/configs/hydra/evaluation.yaml
+++ b/configs/hydra/evaluation.yaml
@@ -1,3 +1,9 @@
+# Copyright (c) Meta Platforms, Inc. and affiliates.
+# All rights reserved.
+#
+# This source code is licensed under the license found in the
+# LICENSE file in the root directory of this source tree.
+
 # output paths for hydra logs
 run:
   dir: ../scratch/logs/evaluation/runs/${datamodule.key}/${run_name}/${now:%Y-%m-%d}_${now:%H-%M-%S}
