--- a/configs/hydra/launcher/submitit_slurm_gpu.yaml
+++ b/configs/hydra/launcher/submitit_slurm_gpu.yaml
@@ -1,4 +1,10 @@
 # @package hydra.launcher
+# Copyright (c) Meta Platforms, Inc. and affiliates.
+# All rights reserved.
+#
+# This source code is licensed under the license found in the
+# LICENSE file in the root directory of this source tree.
+
 submitit_folder: ${hydra.sweep.dir}/.submitit/%j
 timeout_min: 60 # 24 hrs
 cpus_per_task: 4
